# libn2t

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  echo.cpp
examples/echo/: CMakeLists.txt  echo.cpp
examples/tun2socks-ng/: CMakeLists.txt  tun2socks-ng.cpp
src/: CMakeLists.txt  lwipopts.h
src/arch/: cc.h
src/custom/: lwipopts.h  sys_arch.c
src/custom/arch/: cc.h
src/lwip/src/core/: tcp_in.c  udp.c
src/lwip/src/core/ipv4/: ip4.c
src/lwip/src/core/ipv6/: ip6.c
src/n2t/: n2s.cpp  n2s.h  n2t.cpp  n2t.h  socket.cpp  socket.h  tcpsession.cpp  tcpsession.h  udppacket.h  udpsession.cpp  udpsession.h  utils.cpp  utils.h
tests/: echo.cpp
